Creation Branche Accueil

--- a/Site.html
+++ b/Site.html
@@ -28,7 +28,9 @@
 
     <section id="Accueil" class="page active">
         <h1>Bienvenue sur la page d'Accueil</h1>
-        <p>Contenu de la première page.</p>
+        <p>Contenu de la première page.
+            <br>1er Modfi pour creation branche Accueil.
+        </p>
     </section>
 
     <section id="Formules" class="page">
