Creation Branche Formule

--- a/Site.html
+++ b/Site.html
@@ -33,7 +33,9 @@
 
     <section id="Formules" class="page">
         <h1>Bienvenue sur la Page Formule</h1>
-        <p>Contenu de la deuxième page.</p>
+        <p>Contenu de la deuxième page.
+            <br>Premiere modif pour creer la branche Formule <br>
+        </p>
     </section>
 
     <section id="Lieux" class="page">
