Update README and modify homepage title; add CSS for background styling

--- a/Site.html
+++ b/Site.html
@@ -27,7 +27,7 @@
     </nav>
 
     <section id="Accueil" class="page active">
-        <h1>Bienvenue sur la page d'Accueil</h1>
+        <h1>SurvivEat </h1>
         <p>Contenu de la première page.
             <br>1er Modfi pour creation branche Accueil.
         </p>
