Ajout d'une deuxième modification dans la section de contenu de la page Lieux

--- a/Site.html
+++ b/Site.html
@@ -40,6 +40,7 @@
         <h1>Bienvenue sur la Page Lieux</h1>
         <p>Contenu de la troisieme page.
             <br>Premiere modif creation branche lieux
+            <br>Deuxieme modif creation branche lieux
         </p>
     </section>
 
