Correction du nom de l'entreprise dans le README et ajout d'un en-tête dans la page d'accueil; ajout de styles CSS pour le fond et le header

--- a/Site.html
+++ b/Site.html
@@ -27,7 +27,9 @@
     </nav>
 
     <section id="Accueil" class="page active">
-        <h1>SurvivEat </h1>
+        <header>
+            <h1>Surviv'Eat </h1>
+        </header>
         <p>Contenu de la première page.
             <br>1er Modfi pour creation branche Accueil.
         </p>
