Remove excessive whitespace in Site.html + ajout image localisation

--- a/Site.html
+++ b/Site.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Routine</title>
+    <title>Hello'Desh</title>
     <link rel ="stylesheet" href ="style.css">
     <link rel ="icon" href ="Images/Icon.png" type ="image/png">
     <style>
@@ -36,6 +36,16 @@
         <p>Contenu de la deuxième page.</p>
     </section>
 
+
+
+
+
+
+
+
+
+
+
     <section id="Lieux" class="page">
         <h1>Bienvenue sur la Page Lieux</h1>
         <p>Contenu de la troisieme page.
@@ -43,6 +53,34 @@
             <br>Deuxieme modif creation branche lieux
         </p>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script>
         function showPage(pageId) {
