Refactor Formules section layout and enhance header styling

--- a/Site.html
+++ b/Site.html
@@ -26,10 +26,19 @@
     </section>
 
     <section id="Formules" class="page">
-        <h1>Bienvenue sur la Page Formule</h1>
-        <p>Contenu de la deuxième page.
-            <br>Premiere modif pour creer la branche Formule <br>
-        </p>
+        <header>
+            <h1>Nos Formules</h1>
+        </header>
+        <div class="container">
+            <div class="left">
+                <h2>Formule Mensuelle</h2>
+                <p>Contenu de la formule mensuelle.</p>
+            </div>
+            <div class="right">
+                <h2>Formule Hebdomadaire</h2>
+                <p>Contenu de la formule hebdomadaire.</p>
+            </div>
+        </div>
     </section>
 
     <section id="Lieux" class="page">
