Add footer with legal mentions and style adjustments

--- a/Site.html
+++ b/Site.html
@@ -45,7 +45,10 @@
         <h1>Bienvenue sur la Page Lieux</h1>
         <p>Contenu de la troisieme page.</p>
     </section>
-
+    <footer>
+        <p>© 2025 Surviv'Eat - Tous droits réservés</p>
+        <a href="">Mentions légales</a>
+    </footer>
     <script>
         function showPage(pageId) {
             let currentPage = document.querySelector('.page.active'); // Page actuellement affichée
@@ -61,7 +64,6 @@
                 }
             }
     </script>
-
 </body>
 
 </html>
