Update header title and adjust styles for improved layout and visibility

--- a/Site.html
+++ b/Site.html
@@ -22,7 +22,7 @@
 
     <section id="Accueil" class="page active">
         <header>    
-            <h1>Bienvenue sur la page d'Accueil</h1>
+            <h1>Surviv'Eat</h1>
         </header>
         <p>Contenu de la première page.</p>
     </section>
@@ -47,11 +47,13 @@
         <h1>Bienvenue sur la Page Lieux</h1>
         <p>Contenu de la troisieme page.</p>
     </section>
+
     <footer>
         <p>© 2025 Surviv'Eat - Tous droits réservés</p>
         <a href="">Mentions légales</a>
     </footer>
-        <script>
+
+    <script>
         function showPage(pageId) {
             let currentPage = document.querySelector('.page.active'); // Page actuellement affichée
             let nextPage = document.getElementById(pageId); // Nouvelle page à afficher
