Ajout de la formule mensuelle

--- a/Site.html
+++ b/Site.html
@@ -34,7 +34,23 @@
         <div class="container">
             <div class="left">
                 <h2>Formule Mensuelle</h2>
-                <p>Contenu de la formule mensuelle.</p>
+                <p>Contenu de la formule mensuelle.
+                    <br>oeuf x30
+                    <br>Thon
+                    <br>Haricot rouge ou lentille
+                    <br>pois chiches
+                    <br>Pates 1kg
+                    <br>riz 1kg
+                    <br>tomate en conserve
+                    <br>maïs boite de 140g
+                    <br>champignons
+                    <br>compote de pomme 1kg
+                    <br>Lait 1litre
+                    <br>huile d'olivec 1L
+                    <br>sauce tomate pot (500g)
+                    <br>tablette chocolat
+                    <br>céréales
+                </p>
             </div>
             <div class="right">
                 <h2>Formule Hebdomadaire</h2>
