Ajout formule hebdomadaire

--- a/Site.html
+++ b/Site.html
@@ -54,7 +54,23 @@
             </div>
             <div class="right">
                 <h2>Formule Hebdomadaire</h2>
-                <p>Contenu de la formule hebdomadaire.</p>
+                <p>Contenu de la formule hebdomadaire.
+                    <br>Riz / kg
+                    <br>Pate / 500g
+                    <br>Pomme / kg
+                    <br>Banane / piece
+                    <br>Carotte / kg
+                    <br>Tomate  / kg
+                    <br>Salade
+                    <br>Avocat
+                    <br>Yaourt  / Fromage Blanc
+                    <br>Emmentale
+                    <br>Pain de mie
+                    <br>Jus / 1L
+                    <br>Poulet / 1kg
+                    <br>Steaks hachés
+                    <br>oeuf x6
+                </p>
             </div>
         </div>
     </section>
