AJout tarif et frais de livraison

--- a/Site.html
+++ b/Site.html
@@ -34,6 +34,8 @@
         <div class="container">
             <div class="left">
                 <h2>Formule Mensuelle</h2>
+                <h3>Tarif 75€ 
+                    <br>5€ de frais de livraison</h3>
                 <p>Contenu de la formule mensuelle.
                     <br>oeuf x30
                     <br>Thon
@@ -54,6 +56,8 @@
             </div>
             <div class="right">
                 <h2>Formule Hebdomadaire</h2>
+                <h3>Tarif 25,5€  
+                    <br>2€ de frais de livraison</h3>
                 <p>Contenu de la formule hebdomadaire.
                     <br>Riz / kg
                     <br>Pate / 500g
