Refactor header for 'Lieux' page; update styles for improved layout and aesthetics

--- a/Site.html
+++ b/Site.html
@@ -44,7 +44,9 @@
     </section>
 
     <section id="Lieux" class="page">
-        <h1>Bienvenue sur la Page Lieux</h1>
+        <header>
+            <h1>Lieux de ventes</h1>
+        <header>
         <p>Contenu de la troisieme page.</p>
     </section>
 
