Update 'formules' page content and styles; enhance layout with detailed pricing and item lists

--- a/Site.html
+++ b/Site.html
@@ -34,11 +34,47 @@
         <div class="container">
             <div class="left">
                 <h2>Formule Mensuelle</h2>
-                <p>Contenu de la formule mensuelle.</p>
+                <h3>Tarif 75€ 
+                    <br>5€ de frais de livraison</h3>
+                <p>Contenu de la formule mensuelle.
+                    <br>oeuf x30
+                    <br>Thon
+                    <br>Haricot rouge ou lentille
+                    <br>pois chiches
+                    <br>Pates 1kg
+                    <br>riz 1kg
+                    <br>tomate en conserve
+                    <br>maïs boite de 140g
+                    <br>champignons
+                    <br>compote de pomme 1kg
+                    <br>Lait 1litre
+                    <br>huile d'olivec 1L
+                    <br>sauce tomate pot (500g)
+                    <br>tablette chocolat
+                    <br>céréales
+                </p>
             </div>
             <div class="right">
                 <h2>Formule Hebdomadaire</h2>
-                <p>Contenu de la formule hebdomadaire.</p>
+                <h3>Tarif 25,5€  
+                    <br>2€ de frais de livraison</h3>
+                <p>Contenu de la formule hebdomadaire.
+                    <br>Riz / kg
+                    <br>Pate / 500g
+                    <br>Pomme / kg
+                    <br>Banane / piece
+                    <br>Carotte / kg
+                    <br>Tomate  / kg
+                    <br>Salade
+                    <br>Avocat
+                    <br>Yaourt  / Fromage Blanc
+                    <br>Emmentale
+                    <br>Pain de mie
+                    <br>Jus / 1L
+                    <br>Poulet / 1kg
+                    <br>Steaks hachés
+                    <br>oeuf x6
+                </p>
             </div>
         </div>
     </section>
