Fix header tag closure in 'Lieux' section for proper HTML structure

--- a/Site.html
+++ b/Site.html
@@ -46,7 +46,7 @@
     <section id="Lieux" class="page">
         <header>
             <h1>Lieux de ventes</h1>
-        <header>
+        </header>
         <p>Contenu de la troisieme page.</p>
     </section>
 
