Ajout de lite pour les Formules hebdo et mensuel

--- a/Site.html
+++ b/Site.html
@@ -37,21 +37,23 @@
                 <h3>Tarif 75€ 
                     <br>5€ de frais de livraison</h3>
                 <p>Contenu de la formule mensuelle.
-                    <br>oeuf x30
-                    <br>Thon
-                    <br>Haricot rouge ou lentille
-                    <br>pois chiches
-                    <br>Pates 1kg
-                    <br>riz 1kg
-                    <br>tomate en conserve
-                    <br>maïs boite de 140g
-                    <br>champignons
-                    <br>compote de pomme 1kg
-                    <br>Lait 1litre
-                    <br>huile d'olivec 1L
-                    <br>sauce tomate pot (500g)
-                    <br>tablette chocolat
-                    <br>céréales
+                    <ul>
+                    <li>oeuf x30</li>
+                    <li>Thon</li>
+                    <li>Haricot rouge ou lentille</li>
+                    <li>pois chiches</li>
+                    <li>Pates 1kg</li>
+                    <li>riz 1kg</li>
+                    <li>tomate en conserve</li>
+                    <li>maïs boite de 140g</li>
+                    <li>champignons</li>
+                    <li>compote de pomme 1kg</li>
+                    <li>Lait 1litre</li>
+                    <li>huile d'olivec 1L</li>
+                    <li>sauce tomate pot (500g)</li>
+                    <li>tablette chocolat</li>
+                    <li>céréales</li>
+                    </ul>
                 </p>
             </div>
             <div class="right">
@@ -59,21 +61,24 @@
                 <h3>Tarif 25,5€  
                     <br>2€ de frais de livraison</h3>
                 <p>Contenu de la formule hebdomadaire.
-                    <br>Riz / kg
-                    <br>Pate / 500g
-                    <br>Pomme / kg
-                    <br>Banane / piece
-                    <br>Carotte / kg
-                    <br>Tomate  / kg
-                    <br>Salade
-                    <br>Avocat
-                    <br>Yaourt  / Fromage Blanc
-                    <br>Emmentale
-                    <br>Pain de mie
-                    <br>Jus / 1L
-                    <br>Poulet / 1kg
-                    <br>Steaks hachés
-                    <br>oeuf x6
+                    <ul>
+                    <li>Riz / kg</li>
+                    <li>Pate / 500g</li>
+                    <li>Pomme / kg</li>
+                    <li>Banane / piece</li>
+                    <li>Carotte / kg</li>
+                    <li>Tomate  / kg</li>
+                    <li>Salade</li>
+                    <li>Avocat</li>
+                    <li>Yaourt  / Fromage Blanc</li>
+                    <li>Emmentale</li>
+                    <li>Pain de mie</li>
+                    <li>Jus / 1L</li>
+                    <li>Poulet / 1kg</li>
+                    <li>Steaks hachés</li>
+                    <li>oeuf x6</li>
+                    <li>céréales</li>
+                    </ul>
                 </p>
             </div>
         </div>
