Ajout page d'acceuille

--- a/Site.html
+++ b/Site.html
@@ -24,7 +24,17 @@
         <header>    
             <h1>Surviv'Eat</h1>
         </header>
-        <p>Contenu de la première page.</p>
+        <p>
+            Bienvenue chez Surviv'Eat, la solution simple et abordable pour aider les étudiants à bien se nourrir sans se ruiner. Parce que manger équilibré ne devrait jamais être un luxe, nous vous proposons deux types de paniers alimentaires adaptés à votre rythme :
+            <br>
+            <br>🥫 Le panier mensuel : Des conserves et des produits longue durée pour tenir tout le mois.
+            <br>
+            <br>🥕 Le panier hebdomadaire : Des produits frais et variés pour une alimentation équilibrée chaque semaine.
+            <br>
+            <br>🎯 Notre mission ? Vous simplifier la vie avec des repas sains, pratiques et accessibles.
+            <br>
+            <br>💡 Slogan : Bien manger, sans se priver !
+        </p>
     </section>
 
     <section id="Formules" class="page">
