--- a/Site.html
+++ b/Site.html
@@ -27,8 +27,11 @@
         <header>    
             <h1>Surviv'Eat</h1>
         </header>
-        <p>
-            Bienvenue chez Surviv'Eat, la solution simple et abordable pour aider les étudiants à bien se nourrir sans se ruiner. Parce que manger équilibré ne devrait jamais être un luxe, nous vous proposons deux types de paniers alimentaires adaptés à votre rythme :
+        <p id = "presentation">
+            Bienvenue chez Surviv'Eat, la solution simple et abordable pour aider les étudiants à bien se nourrir sans se ruiner.
+            <br>
+            <br>🍽
+            Parce que manger équilibré ne devrait jamais être un luxe, nous vous proposons deux types de paniers alimentaires adaptés à votre rythme :
             <br>
             <br>🥫 Le panier mensuel : Des conserves et des produits longue durée pour tenir tout le mois.
             <br>
