--- a/Site.html
+++ b/Site.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Routine</title>
-    <link rel ="stylesheet" href ="style.css">
+    <title>Hello'dèsh</title>
     <link rel ="stylesheet" href ="style.css">
     <link rel="stylesheet" href="Images/icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -28,18 +26,20 @@
             <h1>Surviv'Eat</h1>
         </header>
         <p id = "presentation">
-            Bienvenue chez Surviv'Eat, la solution simple et abordable pour aider les étudiants à bien se nourrir sans se ruiner.
-            <br>
-            <br>🍽
-            Parce que manger équilibré ne devrait jamais être un luxe, nous vous proposons deux types de paniers alimentaires adaptés à votre rythme :
-            <br>
-            <br>🥫 Le panier mensuel : Des conserves et des produits longue durée pour tenir tout le mois.
-            <br>
-            <br>🥕 Le panier hebdomadaire : Des produits frais et variés pour une alimentation équilibrée chaque semaine.
-            <br>
-            <br>🎯 Notre mission ? Vous simplifier la vie avec des repas sains, pratiques et accessibles.
-            <br>
-            <br>💡 Slogan : Bien manger, sans se priver !
+            <h4>
+                Bienvenue chez Surviv'Eat, la solution simple et abordable pour aider les étudiants à bien se nourrir sans se ruiner.
+                <br>
+                <br>🍽
+                Parce que manger équilibré ne devrait jamais être un luxe, nous vous proposons deux types de paniers alimentaires adaptés à votre rythme :
+                <br>
+                <br>🥫 Le panier mensuel : Des conserves et des produits longue durée pour tenir tout le mois.
+                <br>
+                <br>🥕 Le panier hebdomadaire : Des produits frais et variés pour une alimentation équilibrée chaque semaine.
+                <br>
+                <br>🎯 Notre mission ? Vous simplifier la vie avec des repas sains, pratiques et accessibles.
+                <br>
+                <br>💡 Slogan : Bien manger, sans se priver !
+            </h4>
         </p>
     </section>
 
@@ -51,49 +51,52 @@
             <div class="left">
                 <h2>Formule Mensuelle</h2>
                 <h3>Tarif 75€ 
-                    <br>5€ de frais de livraison</h3>
-                <p>Contenu de la formule mensuelle.
+                    <br>5€ de frais de livraison
+                </h3>
+                <p>Contenu de la formule mensuelle:
                     <ul>
-                    <li>oeuf x30</li>
-                    <li>Thon</li>
-                    <li>Haricot rouge ou lentille</li>
-                    <li>pois chiches</li>
-                    <li>Pates 1kg</li>
-                    <li>riz 1kg</li>
-                    <li>tomate en conserve</li>
-                    <li>maïs boite de 140g</li>
-                    <li>champignons</li>
-                    <li>compote de pomme 1kg</li>
-                    <li>Lait 1litre</li>
-                    <li>huile d'olivec 1L</li>
-                    <li>sauce tomate pot (500g)</li>
-                    <li>tablette chocolat</li>
-                    <li>céréales</li>
+                    <li>30 œufs</li>
+                    <li>10 boites de thon</li>
+                    <li>5 boites d'haricot rouge ou de lentille</li>
+                    <li>3 boites de pois chiches</li>
+                    <li>5 kg de pates</li>
+                    <li>5kg de riz</li>
+                    <li>4 conserves de tomate</li>
+                    <li>10 boites de 140g de maïs</li>
+                    <li>2 conserves de champignons</li>
+                    <li>3 pot compote de pomme de 1kg</li>
+                    <li>6 boiteilles de lait de 1L</li>
+                    <li>1 bouteille d'huile d'olive de 1L</li>
+                    <li>5 pot de sauce tomate de 500g</li>
+                    <li>2 tablettes chocolat</li>
+                    <li>2kg de céréales</li>
                     </ul>
                 </p>
             </div>
             <div class="right">
                 <h2>Formule Hebdomadaire</h2>
                 <h3>Tarif 25,5€  
-                    <br>2€ de frais de livraison</h3>
-                <p>Contenu de la formule hebdomadaire.
+                    <br>2€ de frais de livraison
+                    <br>5€ de livraison si au mois
+                </h3>
+                <p>Contenu de la formule hebdomadaire:
                     <ul>
-                    <li>Riz / kg</li>
-                    <li>Pate / 500g</li>
-                    <li>Pomme / kg</li>
-                    <li>Banane / piece</li>
-                    <li>Carotte / kg</li>
-                    <li>Tomate  / kg</li>
-                    <li>Salade</li>
-                    <li>Avocat</li>
-                    <li>Yaourt  / Fromage Blanc</li>
-                    <li>Emmentale</li>
-                    <li>Pain de mie</li>
-                    <li>Jus / 1L</li>
-                    <li>Poulet / 1kg</li>
-                    <li>Steaks hachés</li>
-                    <li>oeuf x6</li>
-                    <li>céréales</li>
+                    <li>1kg de riz</li>
+                    <li>500g de pates</li>
+                    <li>600g de pommes</li>
+                    <li>5 bananes</li>
+                    <li>600g de carotte</li>
+                    <li>1kg de tomate</li>
+                    <li>1 salade</li>
+                    <li>1 avocat</li>
+                    <li>4 yaourt  / Fromage Blanc</li>
+                    <li>1 sachet d'emmentale</li>
+                    <li>1 paquet de pain de mie</li>
+                    <li> 2L de jus</li>
+                    <li>500g de poulet</li>
+                    <li>2 steaks hachés</li>
+                    <li>6 œufs</li>
+                    <li>500g de céréales</li>
                     </ul>
                 </p>
             </div>
