Peut etre je suis juste trop fort on sait  pas !!!

--- a/Site.html
+++ b/Site.html
@@ -107,7 +107,10 @@
         <header>
             <h1>Lieux de ventes</h1>
         </header>
-        <p>Contenu de la troisieme page.</p>
+        <div class="map">
+            <h5>Retrouvez nous au 68 Rue Laponneraye :</h5>
+            <img src ="images/Localisation.png" alt ="">
+        </div>
     </section>
 
     <footer>
