Add shortcut icon and adjust background opacity for h4 elements

--- a/Site.html
+++ b/Site.html
@@ -6,6 +6,7 @@
     <title>Hello'dèsh</title>
     <link rel ="stylesheet" href ="style.css">
     <link rel="stylesheet" href="Images/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
